Brushed up on formatting on acceptence test 1.
git-svn-id: https://harmoniqua.wur.nl/svn/group2019g/GroupG@341 a0d23bb5-bd9f-3140-b4fc-f659273aacb8

--- a/docs/1. Opening & Creating a model.md
+++ b/docs/1. Opening & Creating a model.md
@@ -28,9 +28,9 @@
 	*On top of the equation field, you can see a label with "Edit mode...".  The State and Equation are shown in the "Dependent variable" and "Equation" text field respectively.*
 	
 6. Remove a single "+" from the equation and click "OK".
-		_The equation "k1+4" for State "A" is now shown in the equation table without the "(incorrect syntax)"._
+	*The equation "k1+4" for State "A" is now shown in the equation table without the "(incorrect syntax)".*
 
-7. Click on the "Algebraic Equation" radiobutton. and type "B" in the "Dependant variable" field and "A+k2+4" in the "Equation" field.  Next, click "Add".
+7. Click on the "Algebraic Equation" radio-button. and type "B" in the "Dependent variable" field and "A+k2+4" in the "Equation" field.  Next, click "Add".
 	*Your state "B" and equation "A+k2+4" are now shown in the formula table.*
 
 8. Click on "Model" -> "Save..." in the menu bar.
