DM TB: Expanded acceptance test 1. Opening & Creating a model.md to now also cover adding/editing unit descriptions.
git-svn-id: https://harmoniqua.wur.nl/svn/group2019g/GroupG@352 a0d23bb5-bd9f-3140-b4fc-f659273aacb8

--- a/docs/1. Opening & Creating a model.md
+++ b/docs/1. Opening & Creating a model.md
@@ -1,3 +1,4 @@
+
 1 - Opening the ModelView
 =====================
 **Precondition: None**
@@ -10,7 +11,9 @@
 					User should be able to input numbers, 
 					Edit existing formula, 
 					The user can add an algebraic equation, 
-					Save model default by model name]**
+					Save model default by model name
+					Edit Descriptions/Units
+					Warning on defining parameter as dependent variable]**
 ## Creating a model
 1. Run the ModelView.class
 	*You are presented with a prompt including 3 buttons: "Open Experiment","Open model" and "New model".*
@@ -23,18 +26,51 @@
 
 4. When you see the model window, enter the Dependent variable: 'A' and Equation: "k1++4" and click "Add".
 	*Your state "dA/dt" and equation "k1++4" are now shown in the formula table. Appended  to the equation is "(incorrect syntax)".*
-	
-5. Select the equation in the formula table and click the "Edit" button.
+
+5.  Click on "Experiment" -> "New" in the top of the window.
+	*A new windows should pop up giving the error that the formulas are incorrect*
+
+6. Click on "OK" in the warning window.
+	*The warning window should close and the user should remain in the Model view.*
+
+7. Select the equation in the formula table and click the "Edit" button.
 	*On top of the equation field, you can see a label with "Edit mode...".  The State and Equation are shown in the "Dependent variable" and "Equation" text field respectively.*
 	
-6. Remove a single "+" from the equation and click "OK".
-	*The equation "k1+4" for State "A" is now shown in the equation table without the "(incorrect syntax)".*
+8. Remove a single "+" from the equation and click "OK".
+		_The equation "k1+4" for State "A" is now shown in the equation table without the "(incorrect syntax)"._
+		
+9. Click on the "Parameters" tab. 
+	 *A new pane should open that shows a table with three columns titled: "Parameter", "Unit" & "Description". The parameter column should show one entry with the name "k1". At the very right the user should see a text box with the buttons "Add" and "Delete" below it*
+	 
+10. Select the textbox and type in "k2" and press "Add".
+	*"k2" should now also appear in the parameter column*
+	
+11. Click on the "k2" entry in the table, it should get highlighted and then click on "Delete".
+	*The "k2" entry should now disappear from the table*
+	
+12. Now select the text box again and type in "B" and press "Add".
+	*The "B" entry should now disappear from the table*
+	
+13. Select the Unit field of "k1" and type in "m/s", next select the unit field of B and type in "km", then select the Description field of "B" and type in "Example". Finally click on "Submit" in the bottom right.
+	*All fields should be deselected and the changes should be saved*
 
-7. Click on the "Algebraic Equation" radio-button. and type "B" in the "Dependent variable" field and "A+k2+4" in the "Equation" field.  Next, click "Add".
+14. Return to the Formulas tab and click on the "Algebraic Equation" radiobutton. and type "B" in the "Dependant variable" field and "A+k2+4" in the "Equation" field.  Next, click "Add".
+	*A warning should pop up telling you that the dependent variable is already in pre-defined parameters*
+
+15. Click on "OK" 
 	*Your state "B" and equation "A+k2+4" are now shown in the formula table.*
 
-8. Click on "Model" -> "Save..." in the menu bar.
+16. Click on the "Dependent variables" tab.
+	*You should now see the same window as for the parameters tab, except there is no text box, "Add" and "Delete" button. You should see in the first column variables "A" and "B" and "B" should have the Unit and Description specified before*
+	 
+17. Select the unit column of variable "A", type in "m" and press submit.
+	*The change is now saved*
+	
+18. Click on the "Parameters" tab and select the unit column for the parameter "k2", type in "km/u" and press "Submit"
+	*The change is now saved*
+	
+19. Click on "Model" -> "Save..." in the menu bar.
 	*A file-chooser window appears showing the default directory ./data with the model name in the "Save as:" field and the default file format "Model files". At the bottom of the file-chooser there is a button "Save" and "Cancel".*
 
-9. Click "Save". 
+20. Open the AcceptanceTest folder and click "Save". 
 	*The file ./data/test.model is created.*
