ALL: appended use-cases [plot a graph, plot a phase plane, simulate experiment, progress-bar, Saving table to CSV] to acceptance test 2.
git-svn-id: https://harmoniqua.wur.nl/svn/group2019g/GroupG@364 a0d23bb5-bd9f-3140-b4fc-f659273aacb8

--- a/docs/2. Opening the ExperimentView.md
+++ b/docs/2. Opening the ExperimentView.md
@@ -1,8 +1,8 @@
-**2  -  Opening the ExperimentView**
+**2  -  Opening the ExperimentView, running the experiment**
 ==============
 **Precondition: 1 - Opening the ModelVieuw**
 **Actor: Experimenter**
-Cover use cases: [Saving Experiment, Creating an Experiment, Check if parameters and state values are valid numbers, ]
+Cover use cases: [Saving Experiment, Creating an Experiment, Check if parameters and state values are valid numbers, plot a graph, plot a phase plane, simulate experiment, progress-bar, Saving table to CSV]
 **##Creating an experiment**
 
  1. in the model window click the experiment menu item.
@@ -13,11 +13,24 @@ Cover use cases: [Saving Experiment, Creating an Experiment, Check if parameters
 	*A value error window pops up whit the text; TypeError for: k1: hallo time start: ++++.* 
 4. Click Ok.
 	*The popup disappears. The time start is reverted to 0.0 and k1 back to 1.0 and the Time end is set to 2050* *
-5. Change the Time start to 2019 and k1 to 5 and click the "Edit"button.
-	*The time start will now be 2019 and k1 will be 5*
+5. Change the Time start to 1 and k1 to 5 and click the "Edit"button.
+	*The time start will now be 1 and k1 will be 5*
 6. In the model window click the Experiment menu item.
 	*You are presented whit a popdown window whit 3 options; new... , open... , save... . *
 7. Click "save...".
 		*A file-chooser window appears showing the default directory ./data with the model name in the "Save as:" field and the default file format "Experiment files. At the bottom of the file-chooser there is a button "Save" and "Cancel".*
 8. Click save.
 	*The file ./data/test.exp is created. And the saver window disappears.*
+9. Click the "run" button.
+	*A window appears with a table that starts expanding automatically and a progressbar that fills together with the table. After the progressbar fills, 2 plots appear in seperate tabs named "A" and "B" that contain their respecive states against time.*
+10. Click on "plot"->"Phase plane"
+	*A window appears with two drop-down fields.*
+11. Select "A" in the leftmost dopdown fiel and "B" in the rightmost dropdown field. Click "OK"
+	*A plot showing the phase-plane of A and B appears in its own tab*
+12. Click "File"->"Save...".
+	*A window appears with options for delimiter and an "OK" button.*
+13. Click "OK"
+			*A file-chooser window appears showing the default directory ./data with the model name in the "Save as:" field and the default file format "CSV". At the bottom of the file-chooser there is a button "Save" and "Cancel".*
+13. Click "Save":
+	*the file is created*
+
